	* Don't allow buddies to be manually added to Bonjour
	* Don't advertise IPv6 on Bonjour because we don't support it
	* Compile fixes for FreeBSD and Solaris
	* Update QQ client version so we can connect again
	* Do not allow ISON requests to stack in IRC, preventing flooding IRC
	  servers when temporary network outages are restored
	* Plug several leaks in the perl plugin loader


version 2.3.0 (11/24/2007):
	http://developer.pidgin.im/query?status=closed&milestone=2.3.0
		NOTE: Some bugs marked fixed in 2.2.1, 2.2.2 or 2.2.3 may not
		      have been fixed until this release (2.3.0).

	libpurple:
	* Real usernames are now shown in the system log.
	* We now honor a PURPLE_DISABLE_DEPRECATED define to allow plugins to
	  catch deprecated functions earlier rather than later.
	* Thanks to a patch from Intel, the Bonjour prpl now supports file
	  transfers using XEP-0096 and XEP-0065.  This should enable file
	  transfers between libpurple clients and Gajim clients, but will not
	  work with iChat or Adium as they use a different file transfer
	  implementation.
	* XMPP password changes that return errors no longer cause the saved
	  password to be changed.
	* XMPP file transfer support has been enhanced to support sending
	  files through a proxy when the server supports discovering a
	  a bytestream proxy.  This should make file transfers much more
	  reliable.  The next release will add support for manually specifying
	  a proxy when the server doesn't advertise one.

	Pidgin:
	* If a plugin says it can't be unloaded, we now display an error and
	  remove the plugin from the list of saved plugins so it won't load
	  at the next startup.  Previously, we were ignoring this case, which
	  could lead to crashes.
	* Mark dialog windows as transient for appropriate parent windows to
	  help window managers do the right thing  (Gabriel Schulhof)
	* Connection errors are now reported in mini-dialogs inside the buddy