@@ -20,6 +20,7 @@ version 2.3.1 (12/??/2007):
 	* Do not allow ISON requests to stack in IRC, preventing flooding IRC
 	  servers when temporary network outages are restored
 	* Plug several leaks in the perl plugin loader
+	* Prevent autoaccept plugin overwriting existing files
 
 
 version 2.3.0 (11/24/2007):
